myprofile input bug fixed on mobile

--- a/src/shared/components/UIElements/MyProfile.css
+++ b/src/shared/components/UIElements/MyProfile.css
@@ -26,10 +26,9 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  flex-wrap: wrap;
   padding: 0.15rem 0.25rem;
 }
-
-
 
 .logout-link {
   color: white;
